# api-mysystemdown

./: .env.example  .gitignore  Dockerfile  compose.yaml  db.sqlite3  pyproject.toml
config/: exceptions_handler.py  settings.py
iam/: models.py  urls.py
iam/management/commands/: seed_group_permissions.py
iam/migrations/: 0001_initial.py  0002_alter_membership_role.py
iam/permissions/: bot_permissions.py  membership_permissions.py  service_permissions.py
iam/repositories/: membership_repository.py
iam/serializers/: membership_serializer.py
iam/services/: membership_service.py
iam/views/: membership_view.py
services/: models.py
services/migrations/: 0001_initial.py
services/serializers/: request_serializer.py
services/services/: request_service.py
services/views/: request_view.py
src/config/: exceptions_handler.py  settings.py
src/iam/: exceptions.py  urls.py
src/iam/authentication/: token_auth.py
src/iam/permissions/: request_permissions.py  systems_permissions.py
src/tenants/: models.py
src/users/: serializers.py  views.py
src/utils/: logger.py  token.py
systems/: urls.py  views.py
systems/repositories/: service_repository.py  system_repository.py
systems/serializers/: bot_serializer.py  service_serializer.py
systems/services/: bot_service.py  service_service.py  system_service.py
systems/views/: bot_view.py  service_view.py  system_view.py
tests/: conftest.py
tests/factories/: system_factory.py  user_factory.py
tests/fixtures/: membership_fixture.py  system_fixture.py  tenant_fixture.py  user_fixture.py
(+40 files in other folders)
